[gd_scene load_steps=2 format=3 uid="uid://b1oad6xu4f12r"]

[ext_resource type="Script" path="res://ui/summary_ui/summary_ui.gd" id="1_sk65x"]

[node name="Summary_UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_top = 75.0
offset_right = -152.0
offset_bottom = -73.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sk65x")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="info_list" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="button" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="menu" type="Button" parent="Panel/button"]
layout_mode = 2
text = "menu
"

[node name="again" type="Button" parent="Panel/button"]
layout_mode = 2
text = "again"

[node name="next" type="Button" parent="Panel/button"]
layout_mode = 2
text = "next level
"

[connection signal="pressed" from="Panel/button/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="Panel/button/again" to="." method="_on_again_pressed"]
[connection signal="pressed" from="Panel/button/next" to="." method="_on_next_pressed"]
